--- a/reactgit/src/App.css
+++ b/reactgit/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hello{
+  background-color: aqua; 
+  width: 600px;
+  height: 500px;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.red{
+  color: red;
+  background-color: rgb(77, 230, 6);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.font{
+  font-size: 25px;
+}
+.back{
+  background-color: brown;
+}
+h1{
+  text-align: center;
+  font-size: 20px;
+}
+button{
+  height: 50px;
+  width: 100px;
+  margin-top: 10px;
+  border-radius: 10px;
+  margin-left: 250px;
+}
+.list{
+  font-size: 25px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
 }
